# ZecruAgentsHive

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  railway.toml  run.py
.github/workflows/: release.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/electron/: main.js  preload.js
apps/desktop/src/: App.tsx  index.css  index.html  main.tsx  renderer.js  styles.css
apps/desktop/src/components/: AdminPanel.tsx  ChatPane.tsx  HivemindDashboard.tsx  LauncherForm.tsx  Markdown.tsx  MissionsPanel.tsx  ProjectSidebar.tsx  ProjectView.tsx  Settings.tsx  SignIn.tsx  ToolCallCard.tsx  Workspace.tsx
apps/desktop/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  separator.tsx  textarea.tsx
apps/desktop/src/lib/: agentshive.ts  cloudSync.ts  supabase.ts  theme.ts  useActiveProject.ts
apps/web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  styles.css
apps/web/src/lib/: api.ts
scripts/: AgentsHive.iss  adopt_legacy_tenant.py  build_desktop.bat  create_admin.py  init_project.py  install.ps1  install.sh  migrate_tenancy.py  railway_setup.py
src/agentshive/: admin.py  auth.py  config.py  dashboard.py  dashboard_events.py  db.py  desktop.py  launcher.py  main.py  oauth.py  project.py  tenant.py  tools.py  web.py
src/agentshive/templates/: __init__.py  consent.html  dashboard.html  login.html
tests/: runner.py  smoke.py  test_agent_presence.py  test_agent_tokens.py  test_dashboard.py  test_dashboard_sse.py  test_dashboard_writes.py  test_desktop.py  test_inbox.py  test_launcher.py  test_oauth.py  test_observed_presence.py  test_projects.py  test_supersede.py  test_v1_1.py  test_v1_11_coder_id.py  test_v1_12_project_info.py  test_v1_13_multicoder_ux.py  test_v1_15_cross_device.py  test_v1_16_scope_guard.py  test_v1_2.py  test_v1_3.py  test_v2_admin.py  test_v2_cloud_sync.py  test_v2_foundation.py  test_v2_tenancy.py  test_v2_web.py
