[project]
name = "agentshive"
version = "1.4.0"
description = "Zecru AgentsHive — MCP bridge so coder AIs (Claude Code, Codex CLI) ask planner AIs (Claude/Codex desktop & mobile) instead of stopping to ask the human."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    "uvicorn>=0.30.0",
    "itsdangerous>=2.0",
]

[project.scripts]
agentshive = "agentshive.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentshive"]

# Hatch's wheel target includes .py files by default; .html template files need
# to be explicitly listed or they won't ship in the built artifact.
[tool.hatch.build.targets.wheel.force-include]
"src/agentshive/templates" = "agentshive/templates"
