[project]
name = "agentshive"
version = "1.4.0"
description = "Zecru AgentsHive — MCP bridge so coder AIs (Claude Code, Codex CLI) ask planner AIs (Claude/Codex desktop & mobile) instead of stopping to ask the human."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    "uvicorn>=0.30.0",
    "itsdangerous>=2.0",
]

[project.scripts]
agentshive = "agentshive.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentshive"]

# Hatch's wheel target only includes .py files for declared packages by default.
# We need .html template files too. Using a global include glob (evaluated at
# build time, not at metadata-gen time) instead of force-include — the latter
# validates paths during metadata generation, which breaks Nixpacks's "copy
# pyproject first, install, then copy source" caching pattern. Global include
# is evaluated only when files are actually being collected for the wheel.
[tool.hatch.build]
include = [
    "src/agentshive/**/*.py",
    "src/agentshive/**/*.html",
]
